fix home container overflow

--- a/plugins/main-window/css/sass/_global.scss
+++ b/plugins/main-window/css/sass/_global.scss
@@ -9,3 +9,7 @@ body {
     font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, sans-serif;
     overflow: hidden;
 }
+
+* {
+  box-sizing: border-box;
+}
