--- a/plugins/main-window/css/sass/home.scss
+++ b/plugins/main-window/css/sass/home.scss
@@ -28,6 +28,7 @@
   z-index: 10;
   color:#999;
   font-size: 10px;
+  background-color: #FFF;
 }
 
 .smile {
@@ -53,6 +54,10 @@
     content: ":)";
     transform: rotate(90deg);
   }
+}
+
+#home_container {
+  overflow: auto;
 }
 
 @keyframes fadeIn {
